# SaGeTi

./: .gitignore  CGraph.cxx  CGraph.hxx  CMakeLists.txt  CModificators.hxx  CPicture.cxx  CPicture.hxx  CRender.cxx  CRender.hxx  IFunction.hxx  IModificator.hxx  README.md  TimFunction.cxx  TimFunction.hxx  input.txt  main.cxx
Doc/: Doxyfile
